--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather Dashboard</title>
 </head>
+
 <body>
-    
+<h1>Weather Dashboard</h1>
+<div>
+    <div class="sidebar"></div>
+</div>
+
+<div></div>
+
+
+
+<script src="script.js"></script>
+
 </body>
+
 </html>
