--- a/index.html
+++ b/index.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="style.css"/>
+
     <title>Weather Dashboard</title>
 </head>
 
 <body>
 <h1>Weather Dashboard</h1>
 <div>
-    <div class="sidebar"></div>
+    <div class="sidebar">Weather At Coordinates</div>
+     <br>
+      <p>Weather</p>
+     <br> 
+
 </div>
 
 <div></div>
 
 
+<script src=" https://api.weather.gov/points/39.7456,-97.0892"></script>
 
 <script src="script.js"></script>
 
