--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 
 </div>
 
-<div></div>
+<div class="container-fluid">
+    <div class="row">
+      <aside class="col-lg-3 bg-light">
+        <h5 class="mt-1">Search for a City:</h5>
+        <div class="form-inline form-group">
+          <input class="form-control" type="text" id="search-value" />
+          <button class="btn btn-primary" id="search-button"> <i class="fa fa-search"></i> </button>
+        </div>
 
 
 <script src=" https://api.weather.gov/points/39.7456,-97.0892"></script>
