readme mockup implemented

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button class="btn btn-primary" id="search-button"> <i class="fa fa-search"></i> </button>
         </div>
 
-        <ul class="list-group data">Forecast</ul>
+        <ul class="list-group data">5 Day Forecast</ul>
 
         <li id="day-1">
             <h5 class="displayDate"></h5>
